# iotech-c-utils

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  RELEASE_NOTES.md  sonar-project.properties
.github/: config.yml
include/iot/: base64.h  bus.h  component.h  config.h  container.h  coredata.h  data.h  file.h  hash.h  iot.h  json.h  logger.h  logging.h  os.h  queue.h  scheduler.h  store.h  strdup.h  thpool.h  thread.h  threadpool.h  time.h  typecode.h  util.h  uuid.h
include/iot/os/: linux.h  macos.h  zephyr.h
include/iotech/: scheduler.h
include/svc/: export-mqtt.h
scripts/: APKBUILD  Dockerfile.alpine-3.10  Dockerfile.alpine-3.11  Dockerfile.alpine-3.12  Dockerfile.alpine-3.13  Dockerfile.alpine-3.14  Dockerfile.alpine-3.15  Dockerfile.alpine-3.16  Dockerfile.alpine-3.17  Dockerfile.alpine-3.18  Dockerfile.alpine-3.19  Dockerfile.alpine-3.20  Dockerfile.alpine-3.21  Dockerfile.alpine-3.7  Dockerfile.alpine-3.8  Dockerfile.alpine-3.9  Dockerfile.azuresphere  Dockerfile.azuresphere-10  Dockerfile.azuresphere-11  Dockerfile.azuresphere-12  Dockerfile.azuresphere-12-2204  Dockerfile.azuresphere-15  Dockerfile.azuresphere-8  Dockerfile.centos-7  Dockerfile.centos-8  Dockerfile.clear  Dockerfile.clearlinux  Dockerfile.debian-10  Dockerfile.debian-11  Dockerfile.debian-12  Dockerfile.debian-8  Dockerfile.debian-9  Dockerfile.fedora-27  Dockerfile.fedora-29  Dockerfile.fedora-30  Dockerfile.fedora-31  Dockerfile.fedora-33  Dockerfile.fedora-34  Dockerfile.fedora-35  Dockerfile.fedora-36  (+54 more)
src/: CMakeLists.txt
src/c/: CMakeLists.txt  base64.c  bus.c  component.c  config.c  container.c  coredata.c  data-cbor.c  data-impl.h  data-io.c  data-json.c  data-xml.c  data-yaml.c  data.c  defs.h.in  export-mqtt.c  file.c  hash.c  iot.c  json.c  logger.c  logging.c  os.c  queue.c  scheduler.c  store.c  strdup.c  thpool.c  thread.c  threadpool.c  time.c  util.c  uuid.c  uuid.h  yxml.c  yxml.h
src/c/cunit/: Automated.c  TestDB.c  TestRun.c
src/c/examples/: CMakeLists.txt  Makefile  cacert.pem  container.c  container_cli.c  container_dl.c  container_dynamiclink.c  data.c  dataEx.c  localhost.pem  mqtt.c  mqttsubconf.c  mycomponent.c  mycomponent.h  pubsub.c  pubsubEx.c  scheduler.c  schedulerEx.c
src/c/examples/container/: CMakeLists.txt  Makefile  container.c
src/c/examples/container_dl/: CMakeLists.txt  Makefile
src/c/examples/data/: CMakeLists.txt  Makefile  data.c
src/c/examples/dynamic/: CMakeLists.txt  Makefile  dynamic.c
src/c/examples/dynamic/config/: logger.json  main.json  mycomp.json
src/c/examples/mycomponent/: mycomponent.c  mycomponent.h
src/c/examples/scheduler/: CMakeLists.txt  Makefile  scheduler.c
src/c/mqtt/: CMakeLists.txt  export-mqtt.c
src/c/tests/: CMakeLists.txt
src/c/tests/compress/: CMakeLists.txt  compress.c
src/c/tests/hash/: CMakeLists.txt  iot_hash.c
src/c/tests/json/: CMakeLists.txt  test.c
src/c/tests/map/: CMakeLists.txt  test.c
src/c/tests/profile/: CMakeLists.txt  test.c
src/c/tests/schedule/: CMakeLists.txt  schedule.c
src/c/tests/snippets/: CMakeLists.txt  chop.sh  snippets.c
src/c/tests/watch/: CMakeLists.txt  README  watch.c
src/c/utests/: CMakeLists.txt
src/c/utests/base64/: CMakeLists.txt  base64.c  base64.h
src/c/utests/bus/: CMakeLists.txt  bus.c  bus.h
src/c/utests/container/: CMakeLists.txt  cont.c  cont.h
src/c/utests/data/: CMakeLists.txt  data.c  data.h
src/c/utests/data-io/: CMakeLists.txt  data-io.c  data-io.h
src/c/utests/json/: CMakeLists.txt  json.c  json.h
src/c/utests/logger/: CMakeLists.txt  logger.c  logger.h
src/c/utests/misc/: CMakeLists.txt  misc.c  misc.h
src/c/utests/mqtt/: CMakeLists.txt  mqtt.c  mqtt.h
src/c/utests/queue/: CMakeLists.txt  queue.c  queue.h
src/c/utests/runner/: CMakeLists.txt  runner.c
src/c/utests/scheduler/: CMakeLists.txt  scheduler.c  scheduler.h
src/c/utests/threadpool/: CMakeLists.txt  threadpool.c  threadpool.h
src/c/utests/time/: CMakeLists.txt  time.c  time.h
src/c/zephyr/: prj-frdm_k64f.conf  prj-native_posix.conf
src/c/zephyr/broker/: CMakeLists.txt  broker.c
src/c/zephyr/lib/: CMakeLists.txt  dummy.c
src/c/zephyr/runner/: CMakeLists.txt
src/cmake/: FindLibpaho.cmake  FindUUID.cmake  TC-mbed.cmake
src/cpp/: CMakeLists.txt
src/cpp/tests/: CMakeLists.txt  main.cpp
src/docs/: CMakeLists.txt  Doxyfile.in
src/etc/zephyr/: prj-frdm_k64f.conf  prj-native_posix.conf  prj-qemu_x86.conf
thpool/: example.c
thpool/tests/: funcs.sh
thpool/tests/src/: api.c  conc_increment.c  no_work.c  nonzero_heap_stack.c  pause_resume.c  wait.c
