add_executable (scheduler scheduler.c)
target_include_directories (scheduler PRIVATE ../../../include)
target_link_libraries (scheduler PRIVATE iot)

add_executable (data data.c)
target_include_directories (data PRIVATE ../../../include)
target_link_libraries (data PRIVATE iot)

if (IOT_BUILD_COMPONENTS)
  add_executable (container container.c mycomponent.c)
  target_include_directories (container PRIVATE ../../../include)
  target_link_libraries (container PRIVATE iot-static)
if (IOT_BUILD_DYNAMIC_LOAD)
  add_executable (container_dynamiclink container_dynamiclink.c mycomponent.c)
  target_include_directories (container_dynamiclink PRIVATE ../../../include)
  target_link_libraries (container_dynamiclink PRIVATE iot ${CMAKE_DL_LIBS})
endif ()
endif ()
