add_executable (scheduler scheduler.c)
target_include_directories (scheduler PRIVATE ../../../include)
target_link_libraries (scheduler PRIVATE iot)

add_executable (data data.c)
target_include_directories (data PRIVATE ../../../include)
target_link_libraries (data PRIVATE iot)

if (IOT_BUILD_COMPONENTS)
  add_executable (container container.c mycomponent.c)
  target_include_directories (container PRIVATE ../../../include)
  target_link_libraries (container PRIVATE iot-static)
if (IOT_BUILD_DYNAMIC_LOAD)
  add_library (mycomponent SHARED mycomponent.c)
  add_library (mycomponent-static STATIC mycomponent.c)
  set_target_properties (mycomponent PROPERTIES OUTPUT_NAME mycomponent CLEAN_DIRECT_OUTPUT 1)
  set_target_properties (mycomponent-static PROPERTIES OUTPUT_NAME mycomponent CLEAN_DIRECT_OUTPUT 1)
  target_include_directories (mycomponent PRIVATE ../../../include)
  target_include_directories (mycomponent-static PRIVATE ../../../include)
  add_executable (container_dl container_dl.c)
  target_include_directories (container_dl PRIVATE ../../../include)
  target_link_libraries (container_dl PRIVATE iot mycomponent ${CMAKE_DL_LIBS})
endif ()
endif ()
