if (IOT_BUILD_DYNAMIC_LOAD)
  add_library (mycomponent SHARED ../mycomponent/mycomponent.c)
  add_library (mycomponent-static STATIC ../mycomponent/mycomponent.c)
  target_link_libraries (mycomponent PRIVATE iot)
  set_target_properties (mycomponent PROPERTIES OUTPUT_NAME mycomponent CLEAN_DIRECT_OUTPUT 1)
  set_target_properties (mycomponent-static PROPERTIES OUTPUT_NAME mycomponent CLEAN_DIRECT_OUTPUT 1)
  target_include_directories (mycomponent PRIVATE ../../../../include)
  target_include_directories (mycomponent-static PRIVATE ../../../../include)
  add_executable (container_dl container_dl.c)
  target_include_directories (container_dl PRIVATE ../../../../include ../mycomponent)
  target_link_libraries (container_dl PRIVATE iot mycomponent ${CMAKE_DL_LIBS})
endif ()