if (IOT_BUILD_DYNAMIC_LOAD)
  add_library (mycomponent SHARED ../mycomponent/mycomponent.c)
  add_library (mycomponent-static STATIC ../mycomponent/mycomponent.c)
  target_link_libraries (mycomponent PRIVATE iot ${LINK_LIBRARIES})
  set_target_properties (mycomponent PROPERTIES OUTPUT_NAME mycomponent CLEAN_DIRECT_OUTPUT 1)
  set_target_properties (mycomponent-static PROPERTIES OUTPUT_NAME mycomponent CLEAN_DIRECT_OUTPUT 1)
  target_include_directories (mycomponent PRIVATE ../../../../include)
  target_include_directories (mycomponent-static PRIVATE ../../../../include)
  add_executable (dynamic dynamic.c)
  target_include_directories (dynamic PRIVATE ../../../../include ../mycomponent)
  target_link_libraries (dynamic PRIVATE iot mycomponent ${LINK_LIBRARIES} ${CMAKE_DL_LIBS})
endif ()