add_executable (runner runner.c)
target_include_directories (runner PRIVATE ../../../../include)
target_link_libraries (runner PRIVATE cunit)
target_link_libraries (runner PRIVATE utest_json)
target_link_libraries (runner PRIVATE utest_bus)
target_link_libraries (runner PRIVATE utest_data)
target_link_libraries (runner PRIVATE utest_threadpool)
if (NOT IOT_BUILD_STATIC)
target_link_libraries (runner PRIVATE utest_mqtt)
endif()
target_link_libraries (runner PRIVATE cutils)
