add_executable (runner runner.c)
target_include_directories (runner PRIVATE ../../../../include)
target_link_libraries (runner PRIVATE cunit)
target_link_libraries (runner PRIVATE utest_json)
target_link_libraries (runner PRIVATE utest_cont)
target_link_libraries (runner PRIVATE utest_logger)
target_link_libraries (runner PRIVATE utest_data)
target_link_libraries (runner PRIVATE utest_threadpool)
target_link_libraries (runner PRIVATE utest_misc)
target_link_libraries (runner PRIVATE utest_scheduler)
target_link_libraries (runner PRIVATE utest_base64)
target_link_libraries (runner PRIVATE iot-static)
