cmake_minimum_required (VERSION 3.13.1)
include ($ENV{ZEPHYR_BASE}/cmake/app/boilerplate.cmake NO_POLICY_SCOPE)
include_directories (../../../../include $ENV{ZEPHYR_BASE}/include/posix)
project (zephyr)
FILE (GLOB cutils_sources ../../*.c)
zephyr_library_named (cutils)
zephyr_library_sources (${cutils_sources})
zephyr_library_link_libraries (app)
target_sources (app PRIVATE dummy.c)
install (TARGETS cutils LIBRARY DESTINATION lib ARCHIVE DESTINATION lib RUNTIME DESTINATION bin)
install (DIRECTORY "${CMAKE_SOURCE_DIR}/../../../../include/iot/" DESTINATION include/iot)
set (CPACK_GENERATOR TGZ)
file (STRINGS ${CMAKE_SOURCE_DIR}/../../../../VERSION CPACK_PACKAGE_VERSION)
set (CPACK_PACKAGE_FILE_NAME "cutils-${CPACK_PACKAGE_VERSION}_${BOARD}")
include (CPack)