cmake_minimum_required (VERSION 3.13.1)
set (NO_BUILD_TYPE_WARNING ON)
include ($ENV{ZEPHYR_BASE}/cmake/app/boilerplate.cmake NO_POLICY_SCOPE)
include_directories (../../../../include $ENV{ZEPHYR_BASE}/include/posix)
project (zephyr)
add_definitions (-D__ZEPHYR__)
if ($ENV{ZEPHYR_114})
  add_definitions (-D__ZEPHYR_114__)
endif ()
file (REMOVE "${CMAKE_SOURCE_DIR}/../../../../include/iot/defs.h")
configure_file ("../../defs.h.in" "${CMAKE_SOURCE_DIR}/../../../../include/iot/defs.h")
FILE (GLOB iotech-iot_sources ../../*.c)
zephyr_library_named (iotech-iot)
zephyr_library_sources (${iotech-iot_sources})
zephyr_library_link_libraries (app)
target_sources (app PRIVATE dummy.c)
install (TARGETS iotech-iot LIBRARY DESTINATION lib ARCHIVE DESTINATION lib RUNTIME DESTINATION bin)
install (DIRECTORY "${CMAKE_SOURCE_DIR}/../../../../include/iot/" DESTINATION include/iot)
set (CPACK_GENERATOR TGZ)
file (STRINGS ${CMAKE_SOURCE_DIR}/../../../../VERSION CPACK_PACKAGE_VERSION)
set (CPACK_PACKAGE_FILE_NAME "iotech-iot-${CPACK_PACKAGE_VERSION}_${BOARD}")
include (CPack)